
[workspace]
members = ["models", "sensor-modbus-01", "host"]

resolver = "2"
[workspace.dependencies]
serialport = { version = "4.2", default_features = false, features = ["serde"] }
serde = { version = "1.0", default-features = false, features = [ "derive" ] }
modbus-client = {path = "../modbus-client"}
bytes = "1.4.0"
anyhow = "1.0.75"
serde_json = "1.0.105"
tokio-util = "0.7.8"
models = { path = "models"}
wit-bindgen = "=0.14.0"
custom-utils = "0.10.15"
log = "0.4.20"
wasmtime = "=15.0.0"
wasmtime-wasi = "=15.0.0"
