[package]
name = "sensor-modbus-01"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
crate-type = ["cdylib"]
[dependencies]
serialport = { workspace = true }
serde = { workspace = true }
modbus-client = { workspace = true }
bytes = { workspace = true }
anyhow = { workspace = true }
serde_json = { workspace = true }
tokio-util = { workspace = true }
models = { workspace = true }
wit-bindgen = { workspace = true }